--- a/.github/workflows/ipa-builder.yml
+++ b/.github/workflows/ipa-builder.yml
@@ -21,5 +21,6 @@ jobs:
         pip3 list -v
     - name: Generate image
       run: |
+        ls -la /home/runner/.local/bin
         export PATH=$PATH:/home/runner/.local/bin
-        sudo ironic-python-agent-builder fedora
+        sudo /home/runner/.local/bin/ironic-python-agent-builder fedora
